--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <header class="header">
-  <h1 id="neon">[ WEB-SCRAPER ]</h1>
+  <h1 id="neon">[ CHINA-SCRAPER ]</h1>
   <nav class="button-group">
     <button class="button-dark" id="scrape" data-toggle="modal" data-target="#alertModal">Scrape New Articles</button>
     <a href="/articles/viewSaved"><button class="button-dark" id="viewSaved">View Saved Articles</button></a>
