--- a/views/savedarticles.handlebars
+++ b/views/savedarticles.handlebars
@@ -8,26 +8,29 @@
 </header>
 <div class="filler"></div>
 
-{{!-- #each to iterate through articles and create article panels --}} {{#each articles}} {{#if saved}}
-<figure class="storyPanel clearfix">
-  <a href="{{storyUrl}}" class="pull-right" target="_blank">
-    <div class="imgBox">
-      <img src="{{imgUrl}}" alt="" class="storyImg" height="150">
-    </div>
-  </a>
-  {{#if storyUrl}}
-  <a href="{{storyUrl}}" class="storyLink" target="_blank">
-    <h2 class="storyHeadline">{{headline}}</h2>
-  </a>
-  {{else}}
-  <h3 class="storyHeadline">{{headline}}</h3>
-  {{/if}}
-  <h5 class="storyByline">{{byLine}}</h5>
-  <h6 class="storySummary">{{summary}}</h6>
-  <button class="addNote storyButton" data-id="{{_id}}">Add Note</button>
-  <button class="deleteArticle storyButton" data-id="{{_id}}">Delete Article</button>
-</figure>
-{{/if}} {{/each}} {{!-- modal for displaying and creating notes --}}
+{{!-- #each to iterate through articles and create article panels --}} 
+{{#each articles}} 
+  {{#if saved}}
+    <figure class="storyPanel clearfix">
+      <a href="{{storyUrl}}" class="pull-right" target="_blank">
+        <div class="imgBox">
+          <img src="{{imgUrl}}" alt="" class="storyImg" height="150">
+        </div>
+      </a>
+      {{#if storyUrl}}
+      <a href="{{storyUrl}}" class="storyLink" target="_blank">
+        <h2 class="storyHeadline">{{headline}}</h2>
+      </a>
+      {{else}}
+      <h3 class="storyHeadline">{{headline}}</h3>
+      {{/if}}
+      <h5 class="storyByline">{{byLine}}</h5>
+      <h6 class="storySummary">{{summary}}</h6>
+      <button class="addNote storyButton" data-id="{{_id}}">Add Note</button>
+      <button class="deleteArticle storyButton" data-id="{{_id}}">Delete Article</button>
+    </figure>
+  {{/if}} 
+{{/each}} {{!-- modal for displaying and creating notes --}}
 <div id="noteModal" class="modal fade" role="dialog">
   <div class="modal-dialog modal-md">
     <div class="modal-content">
